--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/assets/styles/style.css">
     <title>Spotify Imersão Alura</title>
 </head>
 <body>
     <h1>Spotify</h1>
+    <div class="sidebar">
+        <nav>
+            <div>
+                <a href="#">
+                    <img src="" alt="">
+                </a>
+            </div>
+        </nav>
+    </div>
 
     <script src="script.js"></script>
 </body>
