--- a/index.html
+++ b/index.html
@@ -3,17 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/styles/style.css">
     <title>Spotify Imersão Alura</title>
+
+    <!-- ----------------------------------------Links----------------------------------------------------- -->
+    <link rel="stylesheet" href="/assets/styles/style.css"> <!-- style.css -->
+    <!-- Reset css -->
+    <link rel="stylesheet" href="assets/styles/reset.css">
 </head>
 <body>
-    <h1>Spotify</h1>
     <div class="sidebar">
-        <nav>
-            <div>
+        <nav class="sidebar__navegation">
+            <div class="logo">
                 <a href="#">
-                    <img src="" alt="">
+                    <img src="assets/icons/logo-spotify.png" alt="Logo do Spotify">
                 </a>
+                <div>
+                    <ul>
+                        <li>
+                            <a href="">
+                                <span><i class="fa-solid fa-house"></i></span>
+                                <span>início</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span><i class="fa-solid fa-magnifying-glass"></i></span>
+                                <span>Buscar</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </div>
