--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Imersão Alura</title>
-
     <!-- ----------------------------------------Links----------------------------------------------------- -->
-    <link rel="stylesheet" href="/assets/styles/style.css"> <!-- style.css -->
+
     <!-- Reset css -->
     <link rel="stylesheet" href="assets/styles/reset.css">
+    <!-- style.css -->
+    <link rel="stylesheet" href="/assets/styles/style.css"> 
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
+    integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"
+    integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous" />
+
 </head>
 <body>
     <div class="sidebar">
@@ -21,13 +29,13 @@
                     <ul>
                         <li>
                             <a href="">
-                                <span><i class="fa-solid fa-house"></i></span>
+                                <span class="fa fa-home"></span>
                                 <span>início</span>
                             </a>
                         </li>
                         <li>
                             <a href="">
-                                <span><i class="fa-solid fa-magnifying-glass"></i></span>
+                                <span class="fa fa-search"></span>
                                 <span>Buscar</span>
                             </a>
                         </li>
