--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
                 <a href="#">
                     <img src="assets/icons/logo-spotify.png" alt="Logo do Spotify">
                 </a>
-                <div>
                     <ul>
                         <li>
                             <a href="">
@@ -40,11 +39,40 @@
                             </a>
                         </li>
                     </ul>
-                </div>
             </div>
         </nav>
-    </div>
 
+        <div class="library">
+            <div class="library__content">
+                <button class="library__button">
+                    <span class="fa fas fa-book"></span>
+                    <span>Sua Biblioteca</span>
+                </button>
+                <span class="fa fa-plus"></span>
+            </div>
+
+            <section class="section-playlist">
+                <div class="section-playlist__content">
+                    <span class="text title">Crie sua primeira playlist</span>
+                    <span class="text subtitle">É fácil, vamos te ajudar</span>
+                    <button class="section playlist__button">
+                        <span>Criar playlist</span>
+                    </button>
+                </div>
+            </section>
+
+            <div class="cookies">
+                <a href="#">Cookies</a>
+            </div>
+
+            <div class="languages">
+                <button class="languages__button">
+                    <span class="fa fa-globe"></span>
+                    <span>Português do Brasil</span>
+                </button>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
